--- a/join_de.html
+++ b/join_de.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-16 00:20:42 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-18 10:28:55 -->
 <head>
 <link rel="stylesheet" href="G1MRA.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,7 @@
 </div>
 
         <h2>Current subscription rates</h2>
-        <p>UK adult individual annual membership: £30.00;  Europe: £32.00; rest of the world: £36.00.</p>
+        <p>UK adult individual annual membership is £30.00;  Europe: £32.00; rest of the world: £36.00.</p>
 <p>Family membership is an additional £5.00 a year, but does not include an additional magazine or voting rights.
 For under 18 juniors and full-time students, membership is £10 a year and includes the magazine, but not voting rights.</p>
 <p>The membership year runs from 1st January to 31st December. New members joining up to 30th November
@@ -51,16 +51,16 @@ year’s issues
 </p>
 
 <h2>For new members</h2>
-<p>To join online, please complete <a href="https://docs.google.com/forms/d/e/1FAIpQLSdCoBaQbw5ZEAoqFHoGM0an39_Jkso504Sps-j3Wf1xYC_Thw/viewform?usp=publish-editor
+<p>To join online, please complete <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/forms/d/e/1FAIpQLSdCoBaQbw5ZEAoqFHoGM0an39_Jkso504Sps-j3Wf1xYC_Thw/viewform?usp=publish-editor
 ">this form</a>. </p>
-<p>If you prefer a paper form, please send a completed copy of <a href="images/joiningForm.pdf">this form</a> to the address at the top of the form.   </p>
-<p>Payment may be made by direct bank transfer, cheque or by PayPal (with a supplement to cover PayPal fees); you will then receive a new members pack and membership number in the post.
+<p>If you prefer a paper form, please send a completed copy of <a target="_blank" rel="noopener noreferrer" href="images/joiningForm.pdf">this form</a> to the address at the top of the form.   </p>
+<p>Payment may be made by direct bank transfer, cheque or by <a target="_blank" rel="noopener noreferrer" href="https://www.paypal.com/signin">PayPal</a> (with a £2.00 supplement to cover PayPal fees). You will then receive a new members pack and membership number in the post.
 </p>
 
 <h2>Renewal of existing membership	</h2>
-<p>To renew an existing subscription online, please complete <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-TQWWBqXx_GmmY1R6Dq4GKdi6xssszcm_g14AaeknNtYrwQ/viewform?usp=publish-editor">this form</a>.</p>
-<p>If you prefer a paper form, please send a completed copy of <a href="images/renewalForm.pdf">this form</a> to the address at the top of the form.   </p>
-<p>Payment may be made by direct bank transfer, cheque or by PayPal (with a supplement to cover PayPal fees).
+<p>To renew an existing subscription online, please complete <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/forms/d/e/1FAIpQLSe-TQWWBqXx_GmmY1R6Dq4GKdi6xssszcm_g14AaeknNtYrwQ/viewform?usp=publish-editor">this form</a>.</p>
+<p>If you prefer a paper form, please send a completed copy of <a target="_blank" rel="noopener noreferrer" href="images/renewalForm.pdf">this form</a> to the address at the top of the form.   </p>
+<p>Payment may be made by direct bank transfer, cheque or by <a target="_blank" rel="noopener noreferrer" href="https://www.paypal.com/signin">PayPal</a> (with a £2.00 supplement to cover PayPal fees).
 </p>
 </div><!-- close tbox -->
 </div>      
