--- a/marketplace_en.html
+++ b/marketplace_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 22:18:11 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 22:46:31 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,18 +29,21 @@
     <a href="home_fr.html"><img src="images/Flag_of_France_(2024-present).svg" title="Select French site"></a>
   </div><!-- close flags -->
 </div><!-- close navbar	 -->
-    <div class="banner"><a href="images/events1_en.jpg"><img src="images/thumbs/events1_en.jpg" alt="1" title="1"></a> <a href="images/events2_en.jpg"><img src="images/thumbs/events2_en.jpg" alt="2" title="2"></a> <a href="images/events3_en.jpg"><img src="images/thumbs/events3_en.jpg" alt="3" title="3"></a> </div><!-- close banner -->
+<div class="navbar">
+<div class=cbox>
+  <div class=hbox>Marketplace:
+    <a href="books_en.html">Books</a>
+    <a href="parts_en.html">Parts</a>
+    <a href="kits_en.html">Kits</a>
+    <a href="clothing_en.html">Clothing</a>
+    <a href="memberToMember_en.html">MemberToMember</a>
+    <a href="suppliers_en.html">Suppliers</a>
+  </div><!-- close hbox -->	
+</div><!-- close cbox -->
+</div>
     <div class="content">
       <div class=tbox>
     <h1>The G1MRA marketplace</h1>
-
-<h2>Books</h2>
-<h2>Parts</h2>
-<h2>Complete kits</h2>
-<h2>Clothing</h2>
-    <h1>Member to member sales and wants</h1>
-<h2>For sale</h2>
-<h2>Wanted</h2>
       </div><!-- close tbox -->
     </div>
   </div><!-- close vbox --></div><!-- close cbox -->
