--- a/resources_en.html
+++ b/resources_en.html
@@ -1,6 +1,6 @@
 
   <!DOCTYPE html>
-<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 22:18:11 -->
+<!-- G1MRA pages by Adrian Johnstone a.johnstone@rhul.ac.uk built 2026-01-20 22:46:31 -->
 <head>
 <link rel="stylesheet" href="g1mra.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,13 +31,12 @@
 </div><!-- close navbar	 -->
 <div class="navbar">
 <div class=cbox>
-  <div class=hbox>
+  <div class=hbox>Rescources: 
     <a href="safety_en.html">Safety</a>
     <a href="standards_en.html">Standards</a>
     <a href="history_en.html">History</a>
     <a href="designs_en.html">Designs</a>
     <a href="tracks_en.html">Tracks</a>
-    <a href="suppliers_en.html">Suppliers</a>
     <a href="friends_en.html">Friends</a>
     <a href="gauge2_en.html">Gauge 2</a>
   </div><!-- close hbox -->	
